--- a/gwangjinPark/pom.xml
+++ b/gwangjinPark/pom.xml
@@ -35,11 +35,18 @@
 	    <version>3.3.1</version>
 	</dependency>
 	  
-	<dependency>
+<!-- 	<dependency>
 	    <groupId>mysql</groupId>
 	    <artifactId>mysql-connector-java</artifactId>
 	    <version>8.0.11</version>
-	</dependency>
+	</dependency> -->
+<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.6</version>
+</dependency>
+	
 	<dependency>
 	    <groupId>com.microsoft.sqlserver</groupId>
 	    <artifactId>mssql-jdbc</artifactId>
